--- a/local/src_v6/components/pages/index/sl-products/index.pug
+++ b/local/src_v6/components/pages/index/sl-products/index.pug
@@ -8,70 +8,49 @@ include ../../../../components/sliders/pager/sl-pager/index
     title: 'Новинки',
     slides: [
         {
-            img: 'img/tmp/sl-products-1.png',
-            title: 'Модель 1701 ',
-            desc: 'Перчатки женские из полартека (флис) с опушкой под мех нерпы',
-            sale: {
-                items: [
-                {
-                    text: 'new',
-                    className: 'card-links-3-card__sale-text'
-                }]
-            },
-            price: '76,52',
-            number: '156'
-        },
-        {
-            img: 'img/tmp/sl-products-1.png',
-            title: 'Модель 1178б',
-            desc: 'Леопардовые перчатки женские из бархатной ткани',
+            className: 'price-red',
+            img: 'img/tmp/card-links-3-card-01.png',
+            title: 'bes',
+            desc: 'BES активный шампунь для жирных волос s1',
             sale: {
                 items: [{
-                    text: 'new',
-                    className: 'card-links-3-card__sale-text'
+                    text: 'sale'
                 }]
             },
-            price: '39,85',
-            number: '18'
+            price: '21 BYN',
+            old: '28 BYN',
         },
         {
-            img: 'img/tmp/sl-products-2.png',
-            title: 'Модель 857',
-            desc: 'Перчатки женские из кожи козы с подкладкой из ч/ш вкл.',
-            sale: {
-                items: [{
-                    text: 'new',
-                    className: 'card-links-3-card__sale-text'
-                }]
-            },
-            price: '42,15',
-            number: '101'
+            className: '',
+            img: 'img/tmp/card-links-3-card-02.png',
+            title: 'bes',
+            desc: 'BES активный шампунь для профилактики выпадения и активации роста новых волос c1',
+            price: '22 BYN',
+            old: '',
         },
         {
-            img: 'img/tmp/sl-products-1.png',
-            title: 'Модель 851р',
-            desc: 'Перчатки женские из кожи овцы с полушерстяной подкладкой',
-            sale: {
-                items: [{
-                    text: 'new',
-                    className: 'card-links-3-card__sale-text'
-                }]
-            },
-            price: '43,50',
-            number: '28'
+            className: '',
+            img: 'img/tmp/card-links-3-card-03.png',
+            title: 'bes',
+            desc: 'Nouvelle Extreme Gel Гель для укладки волос сильной фиксации ',
+            price: '26.10 BYN',
+            old: '',
         },
         {
-            img: 'img/tmp/sl-products-1.png',
-            title: 'Модель 851р',
-            desc: 'Перчатки женские из кожи овцы с полушерстяной подкладкой',
-            sale: {
-                items: [{
-                    text: 'new',
-                    className: 'card-links-3-card__sale-text'
-                }]
-            },
-            price: '43,50',
-            number: '28'
+            className: '',
+            img: 'img/tmp/card-links-3-card-04.png',
+            title: 'bes',
+            desc: 'BES Бальзам для увлажнения и облегчения расчесывания вьющихся волос',
+            price: '33.70 BYN',
+            old: '',
+        },
+        {
+            className: '',
+            img: 'img/tmp/card-links-3-card-04.png',
+            title: 'bes',
+            desc: 'BES Бальзам для увлажнения и облегчения расчесывания вьющихся волос',
+            price: '33.70 BYN',
+            old: '',
         }
     ]
 })
