--- a/local/src_v6/core/main/variables/style.scss
+++ b/local/src_v6/core/main/variables/style.scss
@@ -40,8 +40,8 @@ $site-max-width:                    1920px;
 //================================================================================//
 
 // brands
-$brand-1:                           #3a71c0;
-$brand-1-active:                    #1570ae;
+$brand-1:                           #080508;
+$brand-1-active:                    rgba($brand-1, .8);
 $brand-2:                           #CF1818;
 $brand-2-active:                    #CF1818;
 $brand-3:                           #57a801;
