--- a/local/src_v6/core/util/svg/style.scss
+++ b/local/src_v6/core/util/svg/style.scss
@@ -558,9 +558,9 @@
 }
 
 @mixin svg-sl-nav-next-active {
-  background-image:url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2221%22%20height%3D%2240%22%20viewBox%3D%220%200%2021.092%2040.124%22%3E%3Cpath%20fill%3D%22%23#{str-slice(#{$link-color-active}, 2, -1)}%22%20d%3D%22M20.799%2019.324c-.053-.053-.119-.081-.18-.119L1.707.293A1%201%200%200%200%20.293%201.708l18.354%2018.354L.293%2038.416a1%201%200%200%200%201.414%201.415L20.62%2020.919c.061-.039.127-.066.18-.119a.995.995%200%200%200%20.287-.738%201%201%200%200%200-.288-.738z%22%2F%3E%3C%2Fsvg%3E');
-  width: 21px;
-  height: 40px;
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2237%22%20height%3D%228%22%20viewBox%3D%220%200%2037%208%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M36.354%203.646a.5.5%200%200%201%200%20.708l-3.182%203.182a.5.5%200%201%201-.707-.708L35.293%204l-2.828-2.828a.5.5%200%201%201%20.707-.708l3.182%203.182zM0%203.5h36v1H0v-1z%22%20fill%3D%22%23080508%22%2F%3E%3C%2Fsvg%3E');
+  width: 37px;
+  height: 8px;
 }
 
 .svg-sl-nav-next-active {
@@ -571,9 +571,9 @@
 }
 
 @mixin svg-sl-nav-next-disabled {
-  background-image:url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2221%22%20height%3D%2240%22%20viewBox%3D%220%200%2021.092%2040.124%22%3E%3Cpath%20fill%3D%22%23#{str-slice(#{$disabled-color}, 2, -1)}%22%20d%3D%22M20.799%2019.324c-.053-.053-.119-.081-.18-.119L1.707.293A1%201%200%200%200%20.293%201.708l18.354%2018.354L.293%2038.416a1%201%200%200%200%201.414%201.415L20.62%2020.919c.061-.039.127-.066.18-.119a.995.995%200%200%200%20.287-.738%201%201%200%200%200-.288-.738z%22%2F%3E%3C%2Fsvg%3E');
-  width: 21px;
-  height: 40px;
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2237%22%20height%3D%228%22%20viewBox%3D%220%200%2037%208%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M36.354%203.646a.5.5%200%200%201%200%20.708l-3.182%203.182a.5.5%200%201%201-.707-.708L35.293%204l-2.828-2.828a.5.5%200%201%201%20.707-.708l3.182%203.182zM0%203.5h36v1H0v-1z%22%20fill%3D%22%23080508%22%2F%3E%3C%2Fsvg%3E');
+  width: 37px;
+  height: 8px;
 }
 
 .svg-sl-nav-next-disabled {
@@ -584,9 +584,9 @@
 }
 
 @mixin svg-sl-nav-next-hover {
-  background-image:url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2221%22%20height%3D%2240%22%20viewBox%3D%220%200%2021.092%2040.124%22%3E%3Cpath%20fill%3D%22%23#{str-slice(#{$link-color-hover}, 2, -1)}%22%20d%3D%22M20.799%2019.324c-.053-.053-.119-.081-.18-.119L1.707.293A1%201%200%200%200%20.293%201.708l18.354%2018.354L.293%2038.416a1%201%200%200%200%201.414%201.415L20.62%2020.919c.061-.039.127-.066.18-.119a.995.995%200%200%200%20.287-.738%201%201%200%200%200-.288-.738z%22%2F%3E%3C%2Fsvg%3E');
-  width: 21px;
-  height: 40px;
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2237%22%20height%3D%228%22%20viewBox%3D%220%200%2037%208%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M36.354%203.646a.5.5%200%200%201%200%20.708l-3.182%203.182a.5.5%200%201%201-.707-.708L35.293%204l-2.828-2.828a.5.5%200%201%201%20.707-.708l3.182%203.182zM0%203.5h36v1H0v-1z%22%20fill%3D%22%23080508%22%2F%3E%3C%2Fsvg%3E');
+  width: 37px;
+  height: 8px;
 }
 
 .svg-sl-nav-next-hover {
@@ -597,9 +597,9 @@
 }
 
 @mixin svg-sl-nav-next {
-  background-image:url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2221%22%20height%3D%2240%22%20viewBox%3D%220%200%2021.092%2040.124%22%3E%3Cpath%20fill%3D%22%23fff%22%20d%3D%22M20.799%2019.324c-.053-.053-.119-.081-.18-.119L1.707.293A1%201%200%200%200%20.293%201.708l18.354%2018.354L.293%2038.416a1%201%200%200%200%201.414%201.415L20.62%2020.919c.061-.039.127-.066.18-.119a.995.995%200%200%200%20.287-.738%201%201%200%200%200-.288-.738z%22%2F%3E%3C%2Fsvg%3E');
-  width: 21px;
-  height: 40px;
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2237%22%20height%3D%228%22%20viewBox%3D%220%200%2037%208%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M36.354%203.646a.5.5%200%200%201%200%20.708l-3.182%203.182a.5.5%200%201%201-.707-.708L35.293%204l-2.828-2.828a.5.5%200%201%201%20.707-.708l3.182%203.182zM0%203.5h36v1H0v-1z%22%20fill%3D%22%23080508%22%2F%3E%3C%2Fsvg%3E');
+  width: 37px;
+  height: 8px;
 }
 
 .svg-sl-nav-next {
