--- a/local/templates/.default/index.html
+++ b/local/templates/.default/index.html
@@ -940,6 +940,138 @@
 															</div>
 																						<div class="sl-nav"><a class="prev" href="#"></a><a class="next" href="#"></a></div>
 														</div>
+														<div class="b-section b-section--advice">
+															<div class="b-section__wrap">
+																<div class="b-section__body">
+																	<div class="d-none d-lg-block">
+																									<div class="advice">
+																										<div class="advice__row row">
+																											<div class="advice__col">
+																												<div class="advice__card">
+																													<div class="advice__img-wrap">
+																														<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-01.svg" alt="alt"></div>
+																													</div>
+																													<div class="advice__descr">
+																														<div class="advice__text">Индивидуальный подход <br>в выборе косметики</div>
+																													</div>
+																												</div>
+																											</div>
+																											<div class="advice__col">
+																												<div class="advice__card">
+																													<div class="advice__img-wrap">
+																														<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-02.svg" alt="alt"></div>
+																													</div>
+																													<div class="advice__descr">
+																														<div class="advice__text">Быстрая <br>доставка</div>
+																													</div>
+																												</div>
+																											</div>
+																											<div class="advice__col">
+																												<div class="advice__card">
+																													<div class="advice__img-wrap">
+																														<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-03.svg" alt="alt"></div>
+																													</div>
+																													<div class="advice__descr">
+																														<div class="advice__text">Обучающие <br>семинары</div>
+																													</div>
+																												</div>
+																											</div>
+																											<div class="advice__col">
+																												<div class="advice__card">
+																													<div class="advice__img-wrap">
+																														<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-04.png" alt="alt"></div>
+																													</div>
+																													<div class="advice__descr">
+																														<div class="advice__text">Сертифицированная <br>продукция</div>
+																													</div>
+																												</div>
+																											</div>
+																											<div class="advice__col">
+																												<div class="advice__card">
+																													<div class="advice__img-wrap">
+																														<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-05.png" alt="alt"></div>
+																													</div>
+																													<div class="advice__descr">
+																														<div class="advice__text">Программа <br>лояльности</div>
+																													</div>
+																												</div>
+																											</div>
+																										</div>
+																									</div>
+																	</div>
+																	<div class="d-block d-lg-none">
+																									<div class="sl-advice">
+																										<div class="wrap cursor inited-not">
+																											<div class="slider">
+																												<div class="slide">
+																													<div class="inner">
+																														<div class="advice__card">
+																															<div class="advice__img-wrap">
+																																<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-01.svg" alt="alt"></div>
+																															</div>
+																															<div class="advice__descr">
+																																<div class="advice__text">Индивидуальный подход <br>в выборе косметики</div>
+																															</div>
+																														</div>
+																													</div>
+																												</div>
+																												<div class="slide">
+																													<div class="inner">
+																														<div class="advice__card">
+																															<div class="advice__img-wrap">
+																																<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-02.svg" alt="alt"></div>
+																															</div>
+																															<div class="advice__descr">
+																																<div class="advice__text">Быстрая <br>доставка</div>
+																															</div>
+																														</div>
+																													</div>
+																												</div>
+																												<div class="slide">
+																													<div class="inner">
+																														<div class="advice__card">
+																															<div class="advice__img-wrap">
+																																<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-03.svg" alt="alt"></div>
+																															</div>
+																															<div class="advice__descr">
+																																<div class="advice__text">Обучающие <br>семинары</div>
+																															</div>
+																														</div>
+																													</div>
+																												</div>
+																												<div class="slide">
+																													<div class="inner">
+																														<div class="advice__card">
+																															<div class="advice__img-wrap">
+																																<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-04.png" alt="alt"></div>
+																															</div>
+																															<div class="advice__descr">
+																																<div class="advice__text">Сертифицированная <br>продукция</div>
+																															</div>
+																														</div>
+																													</div>
+																												</div>
+																												<div class="slide">
+																													<div class="inner">
+																														<div class="advice__card">
+																															<div class="advice__img-wrap">
+																																<div class="advice__img-inner"><img class="advice__img" src="img/tmp/adv-05.png" alt="alt"></div>
+																															</div>
+																															<div class="advice__descr">
+																																<div class="advice__text">Программа <br>лояльности</div>
+																															</div>
+																														</div>
+																													</div>
+																												</div>
+																											</div>
+																																		<div class="sl-nav"><a class="prev" href="#"></a><a class="next" href="#"></a></div>
+																										</div>
+																																	<div class="js-sl-pager sl-pager"></div>
+																									</div>
+																	</div>
+																</div>
+															</div>
+														</div>
 														<div class="b-section b-section--sl-products">
 															<div class="b-section__wrap">
 																<div class="b-section__body">
