--- a/local/templates/.default/_standart/catalog/element-no-photo.html
+++ b/local/templates/.default/_standart/catalog/element-no-photo.html
@@ -1383,9 +1383,8 @@
 					<div class="container">
 						<nav>
 							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Главная страница</a></li>
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Мой кабинет</a></li>
-								<li class="breadcrumb-item active"><span>Мои заказы</span></li>
+								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
+								<li class="breadcrumb-item active"><span>Волосы</span></li>
 							</ol>
 						</nav>
 						<div class="element-title">
@@ -1770,8 +1769,6 @@
 				</div>
 			</div>
 			<div class="scroll-to-top"></div>
-			<!--include ../../components/header/menu-base/menu-base/index-->
-			<!--include ../../components/extra/cookies/index-->
 			<div class="modal-calc modal fade" id="modalCalc" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
