--- a/local/templates/.default/_standart/catalog/list-table.html
+++ b/local/templates/.default/_standart/catalog/list-table.html
@@ -891,9 +891,8 @@
 					<div class="container">
 						<nav>
 							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Главная страница</a></li>
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Мой кабинет</a></li>
-								<li class="breadcrumb-item active"><span>Мои заказы</span></li>
+								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
+								<li class="breadcrumb-item active"><span>Волосы</span></li>
 							</ol>
 						</nav>
 						<h1 id="title">Список элементов</h1>
@@ -1438,10 +1437,9 @@
 										<li class="page-item active"><a class="page-link" href="#">1<span class="sr-only">(current)</span></a></li>
 										<li class="page-item"><a class="page-link" href="#">2</a></li>
 										<li class="page-item"><a class="page-link" href="#">3</a></li>
-										<li class="page-item"><a class="page-link" href="#">...</a></li>
-										<li class="page-item"><a class="page-link" href="#">67</a></li>
-										<li class="page-item hover"><a class="page-link" href="#">68</a></li>
-										<li class="page-item"><a class="page-link" href="#">69</a></li>
+										<li class="page-item"><a class="page-link" href="#">4</a></li>
+										<li class="page-item hover"><a class="page-link" href="#">5</a></li>
+										<li class="page-item"><a class="page-link" href="#">6</a></li>
 										<li class="page-item"><a class="page-link next" href="#"></a></li>
 									</ul>
 								</nav>
@@ -1608,8 +1606,6 @@
 				</div>
 			</div>
 			<div class="scroll-to-top"></div>
-			<!--include ../../components/header/menu-base/menu-base/index-->
-			<!--include ../../components/extra/cookies/index-->
 			<div class="modal fade" id="questModal" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered">
 					<div class="modal-content">
