--- a/local/src_v6/components/base/breadcrumb/index.pug
+++ b/local/src_v6/components/base/breadcrumb/index.pug
@@ -2,9 +2,6 @@ nav
   ol.breadcrumb.list-reset
     li.breadcrumb-item(typeof='v:Breadcrumb')
       a(href='#')
-        | Главная страница
-    li.breadcrumb-item(typeof='v:Breadcrumb')
-      a(href='#')
-        | Мой кабинет
+        | Каталог
     li.breadcrumb-item.active
-      span Мои заказы
+      span Волосы
