--- a/local/templates/.default/_standart/catalog/element-with-tabs-not-avail.html
+++ b/local/templates/.default/_standart/catalog/element-with-tabs-not-avail.html
@@ -1385,9 +1385,8 @@
 					<div class="container">
 						<nav>
 							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Главная страница</a></li>
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Мой кабинет</a></li>
-								<li class="breadcrumb-item active"><span>Мои заказы</span></li>
+								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
+								<li class="breadcrumb-item active"><span>Волосы</span></li>
 							</ol>
 						</nav>
 						<div class="element-title">
@@ -3589,8 +3588,6 @@
 				</div>
 			</div>
 			<div class="scroll-to-top"></div>
-			<!--include ../../components/header/menu-base/menu-base/index-->
-			<!--include ../../components/extra/cookies/index-->
 			<div class="modal fade" id="questModal" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered">
 					<div class="modal-content">
