--- a/local/templates/.default/_standart/demo/glossary.html
+++ b/local/templates/.default/_standart/demo/glossary.html
@@ -891,9 +891,8 @@
 					<div class="container">
 						<nav>
 							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Главная страница</a></li>
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Мой кабинет</a></li>
-								<li class="breadcrumb-item active"><span>Мои заказы</span></li>
+								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
+								<li class="breadcrumb-item active"><span>Волосы</span></li>
 							</ol>
 						</nav>
 						<h1 id="title">Словарь терминов</h1>
@@ -1208,8 +1207,6 @@
 				</div>
 			</div>
 			<div class="scroll-to-top"></div>
-			<!--include ../../components/header/menu-base/menu-base/index-->
-			<!--include ../../components/extra/cookies/index-->
 			<div class="modal fade" id="questModal" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered">
 					<div class="modal-content">
