catalog cards + sort-by

--- a/local/src_v6/components/pages/catalog/card-links-3/index.pug
+++ b/local/src_v6/components/pages/catalog/card-links-3/index.pug
@@ -2,10 +2,10 @@ include ../../../../components/block/card-links-3/index
 
 
 +card-links-3({
-    colClassName: 'col-lg-4 col-6',
+    colClassName: 'col-xl-4 col-6',
     cards: [
         {
-            className: 'price-red',
+            className: 'card-links-3-card--small card-links-3-card--no-bottom card-links-3-card--price-red',
             img: 'img/tmp/card-links-3-card-01.png',
             title: 'bes',
             desc: 'BES активный шампунь для жирных волос s1',
@@ -18,7 +18,7 @@ include ../../../../components/block/card-links-3/index
             old: '28 BYN',
         },
         {
-            className: '',
+            className: 'card-links-3-card--small card-links-3-card--no-bottom',
             img: 'img/tmp/card-links-3-card-02.png',
             title: 'bes',
             desc: 'BES активный шампунь для профилактики выпадения и активации роста новых волос c1',
@@ -26,7 +26,7 @@ include ../../../../components/block/card-links-3/index
             old: '',
         },
         {
-            className: '',
+            className: 'card-links-3-card--small card-links-3-card--no-bottom',
             img: 'img/tmp/card-links-3-card-03.png',
             title: 'bes',
             desc: 'Nouvelle Extreme Gel Гель для укладки волос сильной фиксации ',
@@ -34,7 +34,7 @@ include ../../../../components/block/card-links-3/index
             old: '',
         },
         {
-            className: '',
+            className: 'card-links-3-card--small card-links-3-card--no-bottom',
             img: 'img/tmp/card-links-3-card-04.png',
             title: 'bes',
             desc: 'BES Бальзам для увлажнения и облегчения расчесывания вьющихся волос',
