--- a/local/src_v6/components/pages/catalog/full-catalog-sort/index.pug
+++ b/local/src_v6/components/pages/catalog/full-catalog-sort/index.pug
@@ -3,7 +3,7 @@ include ../../../../components/block/full-catalog-sort/index
 +full-catalog-sort({
     sortBy: {
         name: 'sort_by',
-        placeholder: 'По популярности',
-        options: ['По популярности', 'По новинкам', 'По возрастанию цены', 'По убыванию цены']
+        placeholder: 'популярности',
+        options: ['популярности', 'новинкам', 'возрастанию цены', 'убыванию цены']
     }
 })
