--- a/local/templates/.default/catalog.html
+++ b/local/templates/.default/catalog.html
@@ -954,25 +954,26 @@
 								</nav>
 							</aside>
 							<main class="g-content col-lg-9 col-12" id="workarea">
-																<div class="full-catalog-sort">
-																	<div class="full-catalog-sort__row">
-																		<div class="full-catalog-sort__col full-catalog-sort__col--sort-by">
-																			<div class="full-catalog-sort__sort-by">
-																				<select class="form-control ui-select small-select" name="sort_by">
-																					<option value="0" selected="" disabled="">По популярности</option>
-																					<option value="1">По популярности</option>
-																					<option value="2">По новинкам</option>
-																					<option value="3">По возрастанию цены</option>
-																					<option value="4">По убыванию цены</option>
-																				</select>
+								<div class="d-none d-lg-block">
+																		<div class="full-catalog-sort">
+																			<div class="full-catalog-sort__sort-by-wrap">
+																				<div class="full-catalog-sort__sort-by-text">Сортировать по:</div>
+																				<div class="full-catalog-sort__sort-by">
+																					<select class="form-control ui-select" name="sort_by">
+																						<option value="0" selected="" disabled="">популярности</option>
+																						<option value="1">популярности</option>
+																						<option value="2">новинкам</option>
+																						<option value="3">возрастанию цены</option>
+																						<option value="4">убыванию цены</option>
+																					</select>
+																				</div>
 																			</div>
 																		</div>
-																	</div>
-																</div>
+								</div>
 																<div class="card-links-3">
 																	<div class="card-links-3__row row">
-																		<div class="card-links-3__col col-lg-4 col-6">
-																											<div class="card-links-3-card price-red"><a class="card-links-3-card__main-link" href="#"></a>
+																		<div class="card-links-3__col col-xl-4 col-6">
+																											<div class="card-links-3-card card-links-3-card--small card-links-3-card--no-bottom card-links-3-card--price-red"><a class="card-links-3-card__main-link" href="#"></a>
 																												<div class="card-links-3-card__inner">
 																													<div class="card-links-3-card__top">
 																														<div class="card-links-3-card__favorites"><a class="favorites__btn toFavoritesBtn"></a></div>
@@ -1013,8 +1014,8 @@
 																												</div>
 																											</div>
 																		</div>
-																		<div class="card-links-3__col col-lg-4 col-6">
-																											<div class="card-links-3-card"><a class="card-links-3-card__main-link" href="#"></a>
+																		<div class="card-links-3__col col-xl-4 col-6">
+																											<div class="card-links-3-card card-links-3-card--small card-links-3-card--no-bottom"><a class="card-links-3-card__main-link" href="#"></a>
 																												<div class="card-links-3-card__inner">
 																													<div class="card-links-3-card__top">
 																														<div class="card-links-3-card__favorites"><a class="favorites__btn toFavoritesBtn"></a></div>
@@ -1049,8 +1050,8 @@
 																												</div>
 																											</div>
 																		</div>
-																		<div class="card-links-3__col col-lg-4 col-6">
-																											<div class="card-links-3-card"><a class="card-links-3-card__main-link" href="#"></a>
+																		<div class="card-links-3__col col-xl-4 col-6">
+																											<div class="card-links-3-card card-links-3-card--small card-links-3-card--no-bottom"><a class="card-links-3-card__main-link" href="#"></a>
 																												<div class="card-links-3-card__inner">
 																													<div class="card-links-3-card__top">
 																														<div class="card-links-3-card__favorites"><a class="favorites__btn toFavoritesBtn"></a></div>
@@ -1085,8 +1086,8 @@
 																												</div>
 																											</div>
 																		</div>
-																		<div class="card-links-3__col col-lg-4 col-6">
-																											<div class="card-links-3-card"><a class="card-links-3-card__main-link" href="#"></a>
+																		<div class="card-links-3__col col-xl-4 col-6">
+																											<div class="card-links-3-card card-links-3-card--small card-links-3-card--no-bottom"><a class="card-links-3-card__main-link" href="#"></a>
 																												<div class="card-links-3-card__inner">
 																													<div class="card-links-3-card__top">
 																														<div class="card-links-3-card__favorites"><a class="favorites__btn toFavoritesBtn"></a></div>
