--- a/local/src_v6/components/block/card-links-3-card/style.scss
+++ b/local/src_v6/components/block/card-links-3-card/style.scss
@@ -198,6 +198,132 @@
     z-index: 1;
   }
 
+  &--small {
+
+    .card-links-3-card__col {
+
+      &--title {
+
+        @media (max-width: $screen-sm-max) {
+          display: none;
+        }
+      }
+
+      &--price {
+
+        @media (max-width: $screen-sm-max) {
+          margin-left: 0;
+          margin-bottom: 5px;
+        }
+      }
+
+      &--price-old {
+
+        @media (max-width: $screen-sm-max) {
+          margin-right: auto;
+          margin-bottom: 5px;
+        }
+      }
+
+      &--desc {
+
+        @media (max-width: $screen-sm-max) {
+          margin-bottom: 10px;
+        }
+      }
+    }
+
+    .card-links-3-card__text-wrap {
+
+      @media (max-width: $screen-sm-max) {
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+    }
+
+    .card-links-3-card__price {
+
+      @media (max-width: $screen-sm-max) {
+        font-size: 12px;
+      }
+    }
+
+    .card-links-3-card__old {
+
+      @media (max-width: $screen-sm-max) {
+        font-size: 10px;
+      }
+    }
+
+    .card-links-3-card__desc {
+
+      @media (max-width: $screen-sm-max) {
+        font-size: 10px;
+      }
+    }
+
+    .card-links-3-card__favorites {
+
+      @media (max-width: $screen-sm-max) {
+        padding-top: 10px;
+        padding-right: 10px;
+      }
+    }
+
+    .sale {
+
+      @media (max-width: $screen-sm-max) {
+        top: 10px;
+        left: 10px;
+      }
+
+      &__text {
+
+        @media (max-width: $screen-sm-max) {
+          font-size: 10px;
+        }
+
+        &:before {
+
+          @media (max-width: $screen-sm-max) {
+            width: 3px;
+            height: 3px;
+            margin-top: -2px;
+            margin-right: 5px;
+          }
+        }
+      }
+    }
+
+    .favorites__btn {
+
+      &:before {
+
+        @media (max-width: $screen-sm-max) {
+          width: 17px;
+          height: 15px;
+        }
+      }
+    }
+  }
+
+  &--no-bottom {
+
+    .card-links-3-card__bottom {
+
+      @media (max-width: $screen-sm-max) {
+        display: none;
+      }
+    }
+  }
+
+  &--price-red {
+
+    .card-links-3-card__price {
+      color: $brand-danger;
+    }
+  }
+
   &.favorites-active {
 
     .favorites__btn {
@@ -205,13 +331,6 @@
       &:before {
         @include svg-card-links-3-favorites--active();
       }
-    }
-  }
-
-  &.price-red {
-
-    .card-links-3-card__price {
-      color: $brand-danger;
     }
   }
 
