--- a/local/src_v6/components/block/full-catalog-sort/style.scss
+++ b/local/src_v6/components/block/full-catalog-sort/style.scss
@@ -1,24 +1,29 @@
 .full-catalog-sort {
+  text-align: right;
+  margin-bottom: 28px;
 
-  &__row {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -0.25rem;
+  &__sort-by-wrap {
+    display: inline-block;
+    margin-left: auto;
+  }
 
-    @media (min-width: $screen-xl-min) {
-      justify-content: space-between;
+  &__sort-by {
+    display: inline-block;
+    vertical-align: -5px;
+
+    .ui-selectmenu-button {
+      padding: 0 20px 0 0;
+      border: none;
+      @include font-family-regular();
+      font-size: 18px;
+    }
+
+    .ui-selectmenu-icon {
+      width: 10px;
     }
   }
 
-  &__col {
-    padding: 0 0.25rem;
-  }
-
-  &__sort-by {
-    margin: 0 0 1.0rem;
-  }
-
-  &__sort-by {
-    margin: 0 0 1.0rem;
+  &__sort-by-text {
+    display: inline-block;
   }
 }
