--- a/local/src_v6/core/util/svg/style.scss
+++ b/local/src_v6/core/util/svg/style.scss
@@ -402,9 +402,9 @@
 }
 
 @mixin svg-select-arrow--focus {
-  background-image:url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%222.9%201.9%2010.3%206.3%22%3E%3Ctitle%3E%D1%81%D1%82%D1%80%D0%B5%D0%BB%D0%BA%D0%B0%20%D0%B7%D0%B5%D0%BB%D0%B5%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%BD%D0%B8%D0%B7%3C%2Ftitle%3E%3Cg%20fill%3D%22none%22%20stroke%3D%22%23#{str-slice(#{$link-color}, 2, -1)}%22%20stroke-width%3D%222.256%22%20stroke-linecap%3D%22round%22%3E%3Cpath%20d%3D%22M12%203L8%207M4%203l4%204%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
-  width: 10px;
-  height: 6px;
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%227%22%20viewBox%3D%220%200%2011%207%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1%201l4.5%204.504L10%201%22%20stroke%3D%22%23515855%22%2F%3E%3C%2Fsvg%3E');
+  width: 11px;
+  height: 7px;
 }
 
 .svg-select-arrow--focus {
@@ -415,9 +415,9 @@
 }
 
 @mixin svg-select-arrow {
-  background-image:url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%222.9%201.9%2010.3%206.3%22%3E%3Ctitle%3E%D1%81%D1%82%D1%80%D0%B5%D0%BB%D0%BA%D0%B0%20%D0%B7%D0%B5%D0%BB%D0%B5%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%BD%D0%B8%D0%B7%3C%2Ftitle%3E%3Cg%20fill%3D%22none%22%20stroke%3D%22%23000%22%20stroke-width%3D%222.256%22%20stroke-linecap%3D%22round%22%3E%3Cpath%20d%3D%22M12%203L8%207M4%203l4%204%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
-  width: 10px;
-  height: 6px;
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%227%22%20viewBox%3D%220%200%2011%207%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1%201l4.5%204.504L10%201%22%20stroke%3D%22%23515855%22%2F%3E%3C%2Fsvg%3E');
+  width: 11px;
+  height: 7px;
 }
 
 .svg-select-arrow {
